# fan-control

./: CMakeLists.txt  README.md
src/: main.c
